# stock-prediction

./: .auto_eval_watcher.sh  .ci-trigger  .coverage  .coveragerc  .cursorignore  .cursorrules  .dockerignore  .env.compile  .gitignore  .gitmodules  .pre-commit-config.yaml  .reeval_c_s21_36.sh  .sweep_c_71_100.sh  .sweep_d_51_80.sh  .sweep_f_psn.sh  .watch_c53.sh  .watch_c71_d29.sh  .watch_d26.sh  ACTIVE_TRADES_REDESIGN.md  AGENTS.md  APPLY_CONFIG.sh  ATTENTION_FIX.md  BINANCE_FDUSD_ZERO_FEE.md  BINANCE_PRODUCTION_STATUS.md  CACHING_INTEGRATION_GUIDE.md  CHRONOS2_COMPILE_ERROR_FIX.md  CHRONOS_COMPILE_SUMMARY.md  CLAUDE.md  CLOSE_POLICY_ANALYSIS.md  CLOSE_POLICY_BUG.md  COMPLETE_FIX_GUIDE.md  CONTRIBUTING.md  CRYPTO_IMPROVEMENTS_FOUND.md  CRYPTO_IMPROVEMENT_QUICKSTART.md  CUDA_GRAPHS_FIX_SUMMARY.md  DATA_DRIVEN_DECISION.md  Dockerfile.runpod  FINAL_CONFIGURATION.md  FINAL_TOTO_COMPILATION_SUMMARY.txt  GPU_RECOVERY.md  (+810 more)
cppsimulator/: .gitignore  CMakeLists.txt  README.md
cppsimulator/apps/: run_sim.cpp
cppsimulator/bindings/: market_sim_py.cpp
cppsimulator/build_py/: .ninja_deps  .ninja_log  build.ninja
cppsimulator/include/: forecast.hpp  market_sim.hpp  types.hpp
cppsimulator/src/: forecast.cpp  market_sim.cpp
differentiable_market/: README.md  __init__.py  config.py  data.py  experiment_runner.py  features.py  losses.py  optim.py  policy.py  pyproject.toml  train.py  trainer.py  utils.py
differentiable_market/differentiable_utils/: __init__.py  core.py
differentiable_market/marketsimulator/: __init__.py  backtester.py  run.py
differentiable_market_kronos/: README.md  __init__.py  adapter.py  config.py  embedding.py  eval_sb3.py  kronos_embedder.py  pyproject.toml  speedrun.sh  train.py  train_sb3.py  train_sharpe_diff.py  trainer.py
differentiable_market_kronos/envs/: dm_env.py
differentiable_market_kronos/utils/: timefreq.py
differentiable_market_totoembedding/: README.md  __init__.py  config.py  embedding.py  pyproject.toml  train.py  trainer.py
fast_market_sim/: CMakeLists.txt  Makefile  README.md
fast_market_sim/examples/: benchmark_forecaster.cpp
fast_market_sim/include/: forecaster.h  market_env_fast.h
fast_market_sim/src/: forecaster.cpp
fp4/: README.md  pyproject.toml
fp4/bench/: __init__.py  bench_full_graph.py  bench_fused.py  bench_gemini_ab.py  bench_gemm.py  bench_sps.py  bench_trading.py  compare_trainers.py  eval_generic.py  make_leaderboard.py  monthly_metrics.py  render_replay.py  sweep.py  test_compare_smoke.py
fp4/experiments/: fp4_100M_decisive.yaml  fp4_27pct_target.yaml  fp4_ppo_crypto12.yaml  fp4_ppo_stocks12.yaml  fp4_with_gemini.yaml
fp4/fp4/: __init__.py  autocast.py  cuda_graph.py  cuda_graph_full.py  curriculum.py  distributional.py  dtypes.py  env_adapter.py  fused_linear.py  gemini_planner.py  hadamard.py  lagrangian.py  layers.py  linear.py  log_utils.py  losses.py  objective_27pct.py  optim.py  paths.py  planner_cache.py  policy.py  policy_two_layer.py  (+7 more)
gymrl/: README.md  __init__.py  behaviour.py  build_features.py  cache_utils.py  config.py  differentiable_utils.py  eval_utils.py  evaluate_policy.py  feature_pipeline.py  guard_config_calibrated.json  offline_dataset.py  portfolio_env.py  pyproject.toml  regime_filters.py  train_ppo_allocator.py  wrappers.py
hfinference/: README.md  __init__.py  hf_trading_engine.py  production_engine.py  pyproject.toml  run_trading.py  test_inference.py
hfshared/: README.md  __init__.py  checkpoint.py  data_augmentation.py  features.py  pyproject.toml  scaler.py
hftraining/: README.md  SYSTEM_IMPROVEMENTS_REPORT.md  TRAINING_GUIDE.md  __init__.py  asset_metadata.py  auto_tune.py  base_model_trainer.py  cli_quick_config.json  config.py  data_utils.py  differentiable_profit.py  engine_speed.py  gpu_train.py  gymrl_adapter.py  hf_trainer.py  improved_schedulers.py  injection.py  launch_training.py  logging_utils.py  modern_dit_rl_trader.py  modern_optimizers.py  peft_utils.py  portfolio_rl_trainer.py  profit_tracker.py  pyproject.toml  quick_dit_test.py  quick_realistic_test.py  quick_rl_train.py  quick_test_runner.py  realistic_backtest_rl.py  rl_advanced_trainer.py  robust_data_pipeline.py  run_training.py  run_with_gpu.sh  simple_cuda_test.py  single_batch_hf.py  single_batch_shampoo_muon.py  test_cuda.py  test_gpu.py  test_pipeline.py  (+11 more)
market_sim_c/: CMakeLists.txt  Makefile  README.md
marketsimulator/: Dockerfile  QUICKSTART_SIZING.md  __init__.py  alpaca_wrapper_mock.py  backtest_kelly_chronos2.py  backtest_test3_inline.py  data_curate_daily_mock.py  data_feed.py  environment.py  etf_watchlist.txt  execution.py  forecasting_utils.py  hourly_utils.py  kelly_backtest_20251113_063808.json  kelly_backtest_20251113_063931.json  kelly_backtest_20251113_064048.json  logging_utils.py  predict_stock_forecasting_mock.py  predict_stock_forecasting_proxy.py  process_utils_mock.py  pyproject.toml  results.md  run_pctdiff_validation.py  run_show_forecasts.py  run_sizing_experiments.sh  run_trade_loop.py  runner.py  sizing_strategies.py  state.py  telemetry.py  test_sizing_strategies.py  test_sizing_strategies_simple.py
pufferlib_cpp_market_sim/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  QUICKSTART_CUDA.md  README.md  TRAINING_SESSION_SUMMARY.md  ULTRA_FAST_MARKET_SIM_READY.md  build.sh  build_cuda.sh  setup.py
pufferlibinference/: __init__.py  config.py  data.py  engine.py  pyproject.toml  run_inference.py
pufferlibtraining/: Dockerfile  README.md  __init__.py  eval_model.py  injection.py  market_env.py  pufferrl.py  pyproject.toml  simulate_pairs.py  train_ppo.py
pufferlibtraining2/: README.md  __init__.py  cli.py  config.py  pyproject.toml  trainer.py
rlinc_market/: README.md  __init__.py  _cmarket.c  bench.py  pyproject.toml  setup.py
traininglib/: README.md  __init__.py  attention_benchmark.py  benchmark_cli.py  benchmarking.py  compile_wrap.py  dynamic_batcher.py  ema.py  hf_integration.py  losses.py  optim_factory.py  optimizers.py  param_groups.py  prefetch.py  prof.py  pyproject.toml  report.py  runtime_flags.py  schedules.py  window_utils.py
(+6618 files in other folders)
