[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trading-suite"
version = "0.1.0"
description = "Production trading bot and research environment."
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "wandb>=0.22.2",
    "weave>=0.52.10",
    "pandas_datareader",
    "torch==2.9.0",
    "pandas",
    "numpy==2.1.3",
    "loguru",
    "matplotlib",
    "mlflow>=3.4.1,<3.6",
    "neuralforecast",
    "retry",
    "hyperopt",
    "alpaca-trade-api",
    "SQLAlchemy",
    "websocket-client",
    "py",
    "future",
    "Pillow",
    "ipython",
    "pbr",
    "setuptools",
    "six",
    "wheel",
    "pip",
    "tqdm",
    "optuna",
    "filelock",
    "transformers",
    "huggingface_hub",
    "safetensors",
    "click",
    "requests",
    "joblib",
    "aiohttp",
    "tensorboard",
    "msgpack",
    "urllib3",
    "rsa",
    "pyasn1",
    "attrs",
    "wcwidth",
    "cmd2",
    "pyperclip",
    "fsspec",
    "packaging",
    "parso",
    "jedi",
    "lxml",
    "Mako",
    "MarkupSafe",
    "pytz",
    "toml",
    "idna",
    "multidict",
    "cliff",
    "stevedore",
    "autopage",
    "prettytable",
    "certifi",
    "patsy",
    "regex",
    "cachetools",
    "python-dateutil",
    "cmaes",
    "alembic",
    "colorlog",
    "traitlets",
    "decorator",
    "backcall",
    "pickleshare",
    "pluggy",
    "iniconfig",
    "yarl",
    "chardet",
    "threadpoolctl",
    "greenlet",
    "Markdown",
    "oauthlib",
    "Werkzeug",
    "fonttools",
    "pyparsing",
    "websockets",
    "statsmodels",
    "tokenizers",
    "alpaca-py",
    "fastapi",
    "gunicorn",
    "uvicorn",
    "chronos-forecasting",
    "scikit-learn",
    "cvxpy",
    "python-binance",
    "typer",
    "diskcache",
    "anthropic",
    "gymnasium",
    "stable-baselines3",
    "pufferlib",
    "openai>=1.0.0",
    "pytorch-lightning>=2.4.0,<2.5",
    "torch-optimizer",
    "pytorch-optimizer",
    "aioboto3==12.4.0",
    "boto3==1.34.69",
    "datasets==4.2.0",
    "dill==0.3.8",
    "einops==0.7.0",
    "gluonts[torch]==0.16.2",
    "jaxtyping==0.2.29",
    "rotary-embedding-torch==0.8.6",
    "tabulate==0.9.0",
    "qlib",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "jupyter==1.1.1",
    "pytest>=8.3.3",
    "pytest-env==1.1.5",
    "pytest-timeout>=2.3.1",
    "types-tabulate==0.9.0.20241207",
    "types-PyYAML==6.0.12.20240917",
]

[tool.setuptools.packages.find]
where = [".", "src"]
exclude = [
    "tests",
    "tests.*",
    "external",
    "compiled_models",
    "runs",
    "results",
    "data",
    "lightning_logs*",
    "tensorboard_logs*",
]

[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu128",
    "https://download.pytorch.org/whl/cpu",
]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
toto = { path = "toto", editable = true }
