[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "differentiable-market"
version = "0.1.0"
description = "Differentiable market simulators and training loops for strategy research."
requires-python = ">=3.11"
dependencies = [
    "stock-trading-suite",
    "torch==2.9.0+cu128",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.uv.sources]
stock-trading-suite = { workspace = true }
