[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "differentiable-market-kronos"
version = "0.1.0"
description = "Differentiable market trainer augmented with frozen Kronos embeddings."
requires-python = ">=3.11"
dependencies = [
    "differentiable-market",
    "stock-trading-suite",
    "torch==2.9.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "huggingface_hub>=0.24",
    "einops>=0.8.1,<0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]
hf = [
    "transformers>=4.50",
    "datasets>=2.17",
    "accelerate>=1.10.1",
    "safetensors>=0.4",
]
sb3 = [
    "stable-baselines3>=2.4",
    "gymnasium>=0.29",
]

[tool.uv.sources]
differentiable-market = { workspace = true }
stock-trading-suite = { workspace = true }

[tool.setuptools]
packages = ["differentiable_market_kronos"]

[tool.setuptools.package-dir]
differentiable_market_kronos = "."
