[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp4"
version = "0.0.1"
description = "Minimal NVFP4 (E2M1) training reference library"
requires-python = ">=3.10"
dependencies = ["torch>=2.9"]

[tool.setuptools.packages.find]
include = ["fp4*"]
exclude = ["tests*", "bench*", "experiments*"]
