[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pufferlib-inference"
version = "0.1.0"
description = "Inference utilities for deploying PufferLib portfolio allocators."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "stock-trading-suite[rl,hf]",
    "hfinference",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
hfinference = { workspace = true }
stock-trading-suite = { workspace = true }
