[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pufferlibtraining"
version = "0.0.0"
requires-python = ">=3.11,<3.14"
description = "Training utilities and experiments based on pufferlib."
dependencies = [
  "numpy",
  "pandas",
]

[project.optional-dependencies]
rl = [
  "pufferlib",
  "stable-baselines3",
]

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]

[tool.uv.sources]
traininglib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["pufferlibtraining"]
