[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traininglib"
version = "0.1.0"
description = "Common optimisation and profiling utilities shared across training pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch==2.9.0",
    "transformers>=4.50",
    "torch-optimizer>=0.3",
    "lion-pytorch>=0.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]
